<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.app_todolist_practice.LoginActivity">

    <ImageView
        android:id="@+id/image_logo_main"
        android:layout_width="239dp"
        android:layout_height="172dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/description_logo"
        android:src="@drawable/_todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/error_login"
        android:textColor="@color/red_borders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo_main"
        tools:ignore="TextContrastCheck"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/login_field"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:hint="@string/login_filed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo_main"
        android:background="@drawable/my_field_precet"
        android:inputType="text"
        android:paddingBottom="35dp"/>

    <EditText
        android:id="@+id/password_field"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:hint="@string/password_filed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_field"
        android:inputType="textPassword"
        android:background="@drawable/my_field_precet"
        android:paddingBottom="35dp"/>

    <CheckBox
        android:id="@+id/checkbox_rememberme"
        android:layout_width="154dp"
        android:layout_height="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/remember_me"
        android:textColor="@color/description_for_fields"
        android:theme="@style/MyCustomCheckbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_field"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/button_signin"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/mybutton_precet_signin"
        android:text="@string/login"
        android:textColor="@color/main_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_rememberme"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/powered_by"
        android:textColor="@color/description_for_fields"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_signin"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>