<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/create_todo"
        android:textColor="@color/main_color"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/pick"
        android:textColor="@color/description_for_fields"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextContrastCheck" />

    <CheckBox
        android:id="@+id/priority_high"
        android:layout_width="154dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/high"
        android:textColor="@color/description_for_fields"
        android:theme="@style/MyCustomCheckboxHigh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <CheckBox
        android:id="@+id/priority_medium"
        android:layout_width="154dp"
        android:layout_height="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/medium"
        android:textColor="@color/description_for_fields"
        android:theme="@style/MyCustomCheckboxMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priority_high"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <CheckBox
        android:id="@+id/priority_easy"
        android:layout_width="154dp"
        android:layout_height="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/easy"
        android:textColor="@color/description_for_fields"
        android:theme="@style/MyCustomCheckboxEasy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priority_medium"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/add_todo_field"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/my_field_precet"
        android:hint="@string/todo_add"
        android:inputType="textMultiLine"
        android:paddingBottom="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priority_easy" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/error_add_todo"
        android:textColor="@color/red_borders"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/saveTodoBtn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/mybutton_precet_signin"
        android:text="@string/add_todo_text"
        android:textColor="@color/main_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_todo_field"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>